ZG-2008-07-10-0: Bugfix:    modifing gettext_procedures.60 file to conform to the
                            changed install message did for CR 6589820
                 Review:    LP

JG-2008-07-10-0: Enhancem.: Added test bugs/issuezilla/1751.
                            Cleanup.
                 Review:    RD

CR-2008-07-10-0: Cleanup:   enhanced issue check 2372
                 Review:    DG

LP-2008-07-09-0: Bugfix:    Fixed BDB install messages for 6.2
                 Review:    JO

RH-2008-07-07-0: Bugfix:    Hedeby: 
                            o Parsing of hedeby log files did not work if jvm log
                              contains source class and method.
                            o Stacktraces in log file collection are not in the correct order
                 Review:    CR

RH-2008-06-25-0: Enhancem:  Hedeby:
                            o New test unassign resources for ge-adapter
                              testing the job suspend policy
                            o new method wait_for_notification (searches for an event
                              sequence in the hedeby history)
                            o new method get_history for reading the hedeby history
                            o new method reload_hedeby_component (sdmadm uc)
                            o new method set_hedeby_default_job_suspend_policy
                            o new method set_hedeby_job_suspend_policy
                 Review:    RM

JG-2008-06-30-0: Enhancem.: Added test running appcert on the Solaris binaries.
                 Review:    RD

HP-2008-06-23-0: Bugfix:    qrsh -cwd pwd - test compared pathes with and without
                            automount prefix
                 Changed:   clients/qrsh/check.61.exp
                 Issue:     197
                 Review:    JG

CR-2008-06-20-0: Cleanup:   Rework of expect timeout handling for
                            hedeby_mod_* util procedures. Settings should now